# langSrc

./: README.md  lang.json  project_configure.json  pyproject.toml  setup.py
langSrc/: __init__.py
langSrc.egg-info/: PKG-INFO
