[tool.poetry]
name = "langsrc"
version = "0.0.9"
description = "A language package manager"
authors = ["Rhythmicc <rhythmlian.cn@gmail.com>"]
license = "MIT"
readme = "README.md"
urls = { "repository" = "https://github.com/Rhythmicc/langSrc" }

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
